--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p>Some content</p>
     </div>
     <div id="div2" style="display:none;" style="font-size: 1em;">
-<p>Ich bin Fiona Fröhlin, 20 Jahre alt und lebe in Bern (CH). Zurzeit bin ich in der vierten Grafikfachklasse an der Schule für Gestaltung Biel (SfG BB).
+<p>Ich bin Fiona Fröhlin, 20 Jahre alt und lebe in Bern (CH). Im Sommer 2023 habe ich meine Ausbildung als Grafikerin EFZ an der Schule für Gestaltung Biel (SfG BB) abgeschlossen.
 Beim Gestalten entdecke ich gerne neue Lösungen, ich probiere etwas aus und verwerfe es wieder, ziehe meine Schlüsse daraus und suche weiter.
 <br>
 Ich mag den Ausgleich zwischen der digitalen, bewegten Gestaltung und dem analogen Designen. Deshalb drucke ich im Siebdruckatelier Zeitungen oder T-Shirts und lerne gleichzeitig digitale Tools.
@@ -40,7 +40,7 @@ Privat fotografiere ich analog und halte dabei spannende Kompositionen, alte Lad
 <br>
 <br>
 <br>
-I am Fiona Fröhlin, 20 years old and live in Bern (CH). I'm currently in the fourth year of the Professional Class for Graphic Design (SfG BB) in Biel.
+I am Fiona Fröhlin, 20 years old and live in Bern (CH). In summer 2023, I completed my training as an EFZ graphic designer at the School of Design (SfG BB) in Biel.
 When I design, I like to discover new solutions, I try something out and discard it again, draw my conclusions from it and keep looking.
 I like the balance between digital, moving design and analogue designing. That's why I print newspapers or T-shirts in the screen printing studio and learn digital tools at the same time.
 One of the most important aspects of graphic design for me is the exchange with colleagues, discussions help me to come up with new ideas or to see things from a different angle. That's why I like to work in a team.
