--- a/alleslecker.html
+++ b/alleslecker.html
@@ -43,11 +43,11 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
 
     <button onclick="myFunction()"><a  class="myButton rotate" >DETAILS</a></button>
 
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/faka_webjpg_21.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/Alleslecker_1_web.gif" alt="Cinque Terre"></div>
   <div class="row1">
-  <div class="column1"><p style="padding-left: 10px;">2022, 13x25 cm</p><img style="width: 100%;" src="images/faka_animation_2.gif" alt="Cinque Terre">
+  <div class="column1"><p style="padding-left: 10px;">2022, 13x25 cm</p><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
   </div>
- <div class="column1"><p style="padding-left: 10px; color: blue;">…</p><img style="width: 100%;" src="images/faka_webjpg_1.gif" alt="Cinque Terre">
+ <div class="column1"><p style="padding-left: 10px; color: blue;">…</p><img style="width: 100%;" src="images/Bild_feige_2.jpg" alt="Cinque Terre">
   </div>
        <div class="card"><img src="images/faka_webjpg_7.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
