--- a/faka.html
+++ b/faka.html
@@ -46,7 +46,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   <div class="row1">
   <div class="column1"><p style="padding-left: 10px;">2022, 13x25 cm</p><img style="width: 100%;" src="images/faka_animation_2.gif" alt="Cinque Terre">
   </div>
- <div class="column1"><p style="padding-left: 10px; color: blue;">…</p><img style="width: 100%;" src="images/faka_webjpg_1.gif" alt="Cinque Terre">
+ <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/faka_webjpg_1.gif" alt="Cinque Terre">
   </div>
        <div class="card"><img src="images/faka_webjpg_7.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
