--- a/alleslecker.html
+++ b/alleslecker.html
@@ -43,7 +43,20 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
 
     <button onclick="myFunction()"><a  class="myButton rotate" >DETAILS</a></button>
 
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/Alleslecker_1_web.gif" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_1_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_2_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_3_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_4_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_5_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_6_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_7_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_8_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_9_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_10_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_11_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_12_2.jpg" alt="Cinque Terre"></div>
+
+          
   <div class="row1">
   <div class="column1"><p style="padding-left: 10px;">2022, 13x25 cm</p><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
   </div>
