--- a/alleslecker.html
+++ b/alleslecker.html
@@ -44,17 +44,17 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
     <button onclick="myFunction()"><a  class="myButton rotate" >DETAILS</a></button>
 
 <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_1_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_2_2.jpg" alt="Cinque Terre"></div>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_3_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_4_2.jpg" alt="Cinque Terre"></div>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_5_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_6_2.jpg" alt="Cinque Terre"></div>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_7_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_8_2.jpg" alt="Cinque Terre"></div>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_9_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_10_2.jpg" alt="Cinque Terre"></div>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_11_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Faka</h2><img src="images/AllesFeige_Buch_Schwarz_12_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_2_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_3_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_4_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_5_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_6_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_7_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_8_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_9_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_10_2.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_11_2.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/AllesFeige_Buch_Schwarz_12_2.jpg" alt="Cinque Terre"></div>
 
           
   <div class="row1">
