--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Privately, I take analogue photos and capture exciting compositions, old shop si
     <h2 style="padding-left: 10px;">Fiona Fröhlin</h2>
 <div class="masonry">
      <div class="item"><a href="alleslecker.html">
-    <img src="images/Bild_feige_2.jpg"></a>
+    <img src="images/AllesFeige_Buch_Schwarz_8_2.jpg"></a>
   </div>
   <div class="item"><a href="faka.html">
     <img src="images/faka_webjpg_21.jpg"></a>
