--- a/alleslecker.html
+++ b/alleslecker.html
@@ -62,7 +62,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   </div>
  <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/Bild_feige_2.jpg" alt="Cinque Terre">
   </div>
-       <div class="card"><img src="images/faka_webjpg_7.jpg" alt="Cinque Terre"  width: 100vw;
+       <div class="card"><img src="images/Alleslecker_1.gif" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
 </div>
     <div class="row1">
