--- a/alleslecker.html
+++ b/alleslecker.html
@@ -64,13 +64,9 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   </div>
        <div class="card"><img src="images/Alleslecker_1.gif" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
-</div>
-      div class="card"><img src="images/Ständer_013.png" alt="Cinque Terre"  width: 100vw;
-    height: 100vh;>
-</div>
-          div class="card"><img src="images/Ständer_0112.png" alt="Cinque Terre"  width: 100vw;
-    height: 100vh;>
-</div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_013.png" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_0112.png" alt="Cinque Terre"></div>
+
     <div class="row1">
   <div class="column1"><img style="width: 100%;" src="images/faka_webjpg_5.jpeg" alt="Cinque Terre">
   </div>
