--- a/alleslecker.html
+++ b/alleslecker.html
@@ -64,7 +64,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   </div>
        <div class="card"><img src="images/Alleslecker_1.gif" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_013.png" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_weiss_1.jpg" alt="Cinque Terre"></div>
           <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_01.pdf" alt="Cinque Terre"></div>
 
     <div class="row1">
