--- a/alleslecker.html
+++ b/alleslecker.html
@@ -68,11 +68,11 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
           <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_01.pdf" alt="Cinque Terre"></div>
 
     <div class="row1">
-  <div class="column1"><img style="width: 100%;" src="images/faka_webjpg_5.jpeg" alt="Cinque Terre">
+  <div class="column1"><img style="width: 100%;" src="images/Ständer_weiss_1.jpg" alt="Cinque Terre">
   </div>
  <div class="column1"><img style="width: 100%;" src="images/faka_webjpg_6.jpeg" alt="Cinque Terre">
   </div>
-         <div class="card"><img src="images/faka_webjpg_4.jpg" alt="Cinque Terre"  width: 100vw;
+         <div class="card"><img src="images/Ständer_weiss_1.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
 </div>
   
