--- a/alleslecker.html
+++ b/alleslecker.html
@@ -64,15 +64,15 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   </div>
        <div class="card"><img src="images/Alleslecker_1.gif" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_weiss_1.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Ständer_01.pdf" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"></div>
+          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"></div>
 
     <div class="row1">
-  <div class="column1"><img style="width: 100%;" src="images/Ständer_weiss_1.jpg" alt="Cinque Terre">
+  <div class="column1"><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
   </div>
- <div class="column1"><img style="width: 100%;" src="images/faka_webjpg_6.jpeg" alt="Cinque Terre">
+ <div class="column1"><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
   </div>
-         <div class="card"><img src="images/Ständer_weiss_1.jpg" alt="Cinque Terre"  width: 100vw;
+         <div class="card"><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
 </div>
   
