--- a/alleslecker.html
+++ b/alleslecker.html
@@ -70,7 +70,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
     <div class="row1">
   <div class="column1"><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
   </div>
- <div class="column1"><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
+ <div class="column1"><img style="width: 100%;" src="images/Ständer_011.png" alt="Cinque Terre">
   </div>
          <div class="card"><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
