--- a/alleslecker.html
+++ b/alleslecker.html
@@ -68,13 +68,17 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
           <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Staender_weiss_3.jpg" alt="Cinque Terre"></div>
 <div class="card"><img src="images/Staender_weiss_1.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Staender_weiss_1.jpg" alt="Cinque Terre"></div>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Staender_weiss_4.jpg" alt="Cinque Terre"></div>
          
-
-    <div class="row1">
-  <div class="column1"><img style="width: 100%;" src="images/Bild_feige_1.jpg" alt="Cinque Terre">
+ <div class="row1">
+  <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_2.jpg" alt="Cinque Terre">
   </div>
- <div class="column1"><img style="width: 100%;" src="images/Ständer_013.png" alt="Cinque Terre">
+ <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_3.jpg" alt="Cinque Terre">
+  </div>
+    <div class="row1">
+  <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_1.jpg" alt="Cinque Terre">
+  </div>
+ <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_4.jpg" alt="Cinque Terre">
   </div>
          <div class="card"><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
