--- a/alleslecker.html
+++ b/alleslecker.html
@@ -63,12 +63,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
  <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/Bild_feige_2.jpg" alt="Cinque Terre">
   </div>
        <div class="card"><img src="images/Alleslecker_1.gif" alt="Cinque Terre"  width: 100vw;
-    height: 100vh;>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Staender_weiss_2.jpg" alt="Cinque Terre"></div>
-          <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Staender_weiss_3.jpg" alt="Cinque Terre"></div>
-<div class="card"><img src="images/Staender_weiss_1.jpg" alt="Cinque Terre"  width: 100vw;
-    height: 100vh;>
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/Staender_weiss_4.jpg" alt="Cinque Terre"></div>
+    height: 100vh;></div>
          
  <div class="row1">
   <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_2.jpg" alt="Cinque Terre">
@@ -84,7 +79,9 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
     height: 100vh;>
 </div>
 
-        <p><a href=".pdf">Hier geht es zu meiner Präsentation über Alles lecker!</a></p>
+        <h2><a href="4_2418_Analyse_FionaFroehlin.pdf">Hier geht es zu meiner Präsentation über Alles lecker!</a></h2>
+         <h2><a href="4_2418_Gestaltungskonzept_FionaFroehlin.pdf">Hier geht es zu meiner Präsentation über Alles lecker!</a></h2>
+         <h2><a href="4_2418_Praesentation_FionaFroehlin.pdf">Hier geht es zu meiner Präsentation über Alles lecker!</a></h2>
   
     
     <footer style="text-align: center; line-height: 1.6;" >
