--- a/alleslecker.html
+++ b/alleslecker.html
@@ -80,9 +80,9 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
 </div>
 
         <h2>Hier geht es zu meinen Dokumentationen über die Arbeit «Alles lecker!»</h2>
-        <h2><a href="images/4_2418_Analyse_FionaFroehlin.pdf">Analyse</a></h2>
-         <h2><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">Gestaltungskonzept</a></h2>
-         <h2><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">Präsentation</a></h2>
+        <h2><a href="images/4_2418_Analyse_FionaFroehlin.pdf">· Analyse</a></h2>
+         <h2><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">· Gestaltungskonzept</a></h2>
+         <h2><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">· Präsentation</a></h2>
   
     
     <footer style="text-align: center; line-height: 1.6;" >
