--- a/alleslecker.html
+++ b/alleslecker.html
@@ -78,11 +78,11 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
          <div class="card"><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"  width: 100vw;
     height: 100vh;>
 </div>
-
-        <h2>Hier geht es zu meinen Dokumentationen über die Arbeit «Alles lecker!»</h2>
-        <h2><a href="images/4_2418_Analyse_FionaFroehlin.pdf">· Analyse</a></h2>
-         <h2><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">· Gestaltungskonzept</a></h2>
-         <h2><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">· Präsentation</a></h2>
+        
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Hier geht es zu meinen Dokumentationen über die Arbeit «Alles lecker!»</h2>
+        <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Analyse_FionaFroehlin.pdf">· Analyse</a></h2>
+         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">· Gestaltungskonzept</a></h2>
+         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">· Präsentation</a></h2></div>
   
     
     <footer style="text-align: center; line-height: 1.6;" >
