--- a/alleslecker.html
+++ b/alleslecker.html
@@ -75,7 +75,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   </div>
  <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_4.jpg" alt="Cinque Terre">
   </div>
-         <div class="card"><img src="images/Bild_feige_1.jpg" alt="Cinque Terre"  width: 100vw;
+         <div class="card"><img src="" alt=""  width: 100vw;
     height: 100vh;>
 </div>
         
