--- a/unica.html
+++ b/unica.html
@@ -50,7 +50,7 @@ During my six-month internship at Studio Gretzinger in Berlin, I was able to par
   <div class="row1">
   <div class="column1"><p style="padding-left: 10px;">2022, 20,4x25,5 cm</p><img style="width: 100%;" src="images/unica_webjpg_1.jpg" alt="Cinque Terre">
   </div>
- <div class="column1"><p style="padding-left: 10px; color: blue;">…</p><img style="width: 100%;" src="images/unica_webjpg_16.jpg" alt="Cinque Terre">
+ <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/unica_webjpg_16.jpg" alt="Cinque Terre">
   </div>
 <div class="card"><img src="images/unica_webjpg_2.jpg" alt="Cinque Terre"  width: 100vw; height: 100vh;></div>
   <div class="card"><img src="images/unica_webjpg_14.jpg" alt="Cinque Terre"  width: 100vw;
