--- a/dark.html
+++ b/dark.html
@@ -47,7 +47,7 @@ Black and white poster on the theme of «dark». The poster I designed with Shar
   <div class="row1">
   <div class="column1"><p style="padding-left: 10px;">2021, 89,5x128 cm</p><img style="width: 100%;" src="images/dark_website_2.gif" alt="Cinque Terre">
   </div>
- <div class="column1"><p style="padding-left: 10px; color: blue;">…</p><img style="width: 100%;" src="images/dark_website_1.gif" alt="Cinque Terre">
+ <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/dark_website_1.gif" alt="Cinque Terre">
   </div>
 <div class="card"><img src="images/darkmock_webjpg_1.jpg" alt="Cinque Terre"  width: 100vw; height: 100vh;></div>
   <div class="card"><img src="images/darkprog_webjpg_11.jpg" alt="Cinque Terre"  width: 100vw;
