--- a/alleslecker.html
+++ b/alleslecker.html
@@ -82,9 +82,9 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
 
         
 <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Hier geht es zu meinen Dokumentationen über die Arbeit «Alles lecker!»</h2>
-        <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Analyse_FionaFroehlin.pdf">· Analyse</a></h2>
-         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">· Gestaltungskonzept</a></h2>
-         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">· Präsentation</a></h2></div>
+        <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Analyse_FionaFroehlin.pdf">&#8594; Analyse</a></h2>
+         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">&#10136; Gestaltungskonzept</a></h2>
+         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">&#10140; Präsentation</a></h2></div>
   
     
     <footer style="text-align: center; line-height: 1.6;" >
