--- a/alleslecker.html
+++ b/alleslecker.html
@@ -81,7 +81,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
         <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2>
 
         
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Hier geht es zu meinen Dokumentationen über die Arbeit «Alles lecker!»</h2>
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">Hier geht es zu meinen Dokumentationen über die Arbeit:</h2>
         <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Analyse_FionaFroehlin.pdf">&#8594; Analyse</a></h2>
          <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Gestaltungskonzept_FionaFroehlin.pdf">&#10136; Gestaltungskonzept</a></h2>
          <h2 style="padding: 10px; text-align: center;"><a href="images/4_2418_Praesentation_FionaFroehlin.pdf">&#10140; Präsentation</a></h2></div>
