--- a/qvkarte.html
+++ b/qvkarte.html
@@ -43,7 +43,7 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
 
     <button onclick="myFunction()"><a  class="myButton rotate" >DETAILS</a></button>
 
-<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">QV Expo Karte</h2><img src="images/<div class="item"><a href="qvkarte.html">
+<div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;">QV Expo Karte</h2><a href="qvkarte.html">
     <img src="images/QVKarte_Schwarz_01_1.jpg"></a>
   </div>" alt="Cinque Terre"></div>
           <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2><img src="images/QVKarte_Schwarz_04.jpg" alt="Cinque Terre"></div>
