--- a/qvkarte.html
+++ b/qvkarte.html
@@ -67,6 +67,10 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   </div>
  <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_4.jpg" alt="Cinque Terre">
   </div>
+                 <div class="card"><img src="" alt=""  width: 100vw;
+    height: 100vh;>
+</div>
+        <div class="scrolling-wrapper"><h2 style="padding: 10px; text-align: center;"></h2>
         
     
     <footer style="text-align: center; line-height: 1.6;" >
