--- a/qvkarte.html
+++ b/qvkarte.html
@@ -60,13 +60,9 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
  <div class="row1">
   <div class="column1"><img style="width: 100%;" src="images/makingoff_qvkarte_06.png" alt="Cinque Terre">
   </div>
- <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_3.jpg" alt="Cinque Terre">
+ <div class="column1"><img style="width: 100%;" src="images/makingoff_qvkarte_01.jpeg" alt="Cinque Terre">
   </div>
-    <div class="row1">
-  <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_1.jpg" alt="Cinque Terre">
-  </div>
- <div class="column1"><img style="width: 100%;" src="images/Staender_weiss_4.jpg" alt="Cinque Terre">
-  </div>
+    
                  <div class="card"><img src="" alt=""  width: 100vw;
     height: 100vh;>
 </div>
