--- a/qvkarte.html
+++ b/qvkarte.html
@@ -56,12 +56,13 @@ Poster for a concert evening at the Club Bad Bonn. The Bad Bonn, a club located 
   <div class="row1">
   <div class="column1"><p style="padding-left: 10px;"></p><img style="width: 100%;" src="images/makingoff_qvkarte_02.jpeg" alt="Cinque Terre">
   </div>
- <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/makingoff_qvkarte_03.png" alt="Cinque Terre">
- <div class="row1">
+ <div class="column1"><p style="padding-left: 10px; color: blue;"></p><img style="width: 100%;" src="images/makingoff_qvkarte_01.jpeg" alt="Cinque Terre">
+
+     <div class="row1">
   <div class="column1"><img style="width: 100%;" src="images/makingoff_qvkarte_06.png" alt="Cinque Terre">
   </div>
- <div class="column1"><img style="width: 100%;" src="images/makingoff_qvkarte_01.jpeg" alt="Cinque Terre">
-  </div>
+ <div class="column1"><img style="width: 100%;" src="images/makingoff_qvkarte_06.png" alt="Cinque Terre">
+  </div></div>
     
                  <div class="card"><img src="" alt=""  width: 100vw;
     height: 100vh;>
