--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ Privately, I take analogue photos and capture exciting compositions, old shop si
     <h2 style="padding-left: 10px;">Fiona Fröhlin</h2>
 <div class="masonry">
      <div class="item"><a href="alleslecker.html">
-    <img src="images/AllesFeige_Buch_Schwarz_13_2.jpg"></a>
+    <img style="border-radius: 25px;" src="images/AllesFeige_Buch_Schwarz_13_2.jpg"></a>
   </div>
   <div class="item"><a href="faka.html">
-    <img src="images/faka_webjpg_21.jpg"></a>
+    <img  style="border-radius: 20px;" src="images/faka_webjpg_21.jpg"></a>
   </div>
   <div class="item"><a href="cafeoder.html">
     <img src="images/cafeoder_webjpg_5.jpg"></a>
