--- a/index.html
+++ b/index.html
@@ -83,37 +83,37 @@ Privately, I take analogue photos and capture exciting compositions, old shop si
     <img style="border-radius: 25px;" src="images/AllesFeige_Buch_Schwarz_13_2.jpg"></a>
   </div>
   <div class="item"><a href="faka.html">
-    <img  style="border-radius: 20px;" src="images/faka_webjpg_21.jpg"></a>
+    <img  style="border-radius: 25px;" src="images/faka_webjpg_21.jpg"></a>
   </div>
   <div class="item"><a href="cafeoder.html">
     <img src="images/cafeoder_webjpg_5.jpg"></a>
   </div>
   <div class="item"><a href="dasneuinnouveau.html">
-    <img src="images/neuinnouveau_webjpg_3.jpg"></a>
+    <img style="border-radius: 25px;" src="images/neuinnouveau_webjpg_3.jpg"></a>
   </div>
   <div class="item"><a href="sagex.html">
-    <img src="images/sagex_webjpg_10.jpg"></a>
+    <img style="border-radius: 25px;" src="images/sagex_webjpg_10.jpg"></a>
   </div>
   <div class="item"><a href="bildsprache.html">
-    <img src="images/nilay_webjpg_8.jpg"></a>
+    <img style="border-radius: 25px;" src="images/nilay_webjpg_8.jpg"></a>
   </div>
   <div class="item"><a href="frafar.html">
-    <img src="images/frafar_webjpg_1.jpg"></a>
+    <img style="border-radius: 25px;" src="images/frafar_webjpg_1.jpg"></a>
   </div>
     <div class="item"><a href="siebdruck.html">
-    <img src="images/sieb_webjpg_5.gif"></a>
+    <img style="border-radius: 25px;" src="images/sieb_webjpg_5.gif"></a>
   </div>
   <div class="item"><a href="fototage.html">
-    <img src="images/fototage_webjpg_7.jpg"></a>
+    <img style="border-radius: 25px;" src="images/fototage_webjpg_7.jpg"></a>
   </div>
     <div class="item"><a href="qvkarte.html">
-    <img src="images/QVKarte_Schwarz_01_1.jpg"></a>
+    <img style="border-radius: 25px;" src="images/QVKarte_Schwarz_01_1.jpg"></a>
   </div>
   <div class="item"><a href="dark.html">
-    <img src="images/darkvers_webjpg_12.jpg"></a>
+    <img style="border-radius: 25px;" src="images/darkvers_webjpg_12.jpg"></a>
   </div>
   <div class="item"><a href="unica.html">
-    <img src="images/unica_webjpg_17.jpg"></a>
+    <img style="border-radius: 25px;" src="images/unica_webjpg_17.jpg"></a>
   </div>
     </div>
     
